tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_enums_match_reachability_errors_ignored_when_there_is_a_type_error/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Expected type Opt<Field>, found type Field
  ┌─ src/main.nr:7:17
  │
7 │                 3 => (),
  │                 -
  │

Aborting due to 1 previous error
